機能 #96 ルームの古いメッセージ読み込み時にアニメーションを表示する

--- a/src/ChatApp/Features/Room/Views/Index.cshtml
+++ b/src/ChatApp/Features/Room/Views/Index.cshtml
@@ -8,7 +8,8 @@
         chat-room="c.room"
         chat-content=".media-list"
         chat-room-change="RoomCtrl.ChangeRoom()"
-        old-messages="RoomCtrl.GetOldmessages()">
+        old-messages="RoomCtrl.GetOldmessages()"
+        loading-template="'<div class=&quot;loading&quot;></div>'">
         <div class="row" id="chat-messages">
             <div ng-include="'/chat/messages.tmpl.html'"></div>
         </div>
