--- a/src/ChatApp/wwwdev/less/room/_message.less
+++ b/src/ChatApp/wwwdev/less/room/_message.less
@@ -1,4 +1,10 @@
 #chat-messages {
+    .loading {
+        border: 2px solid #09f;
+        opacity: 0.5;
+        margin-top: 10px;
+        .__loading_spin__(20px);
+    }
     .message-list {
         .message-item {
             margin: 0;
