--- a/src/ChatApp/wwwroot/css/site.css
+++ b/src/ChatApp/wwwroot/css/site.css
@@ -14,6 +14,14 @@
     border-bottom-color: #23527c;
   }
 }
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 body,
 html,
 div {
