タスク #103 JavaScript => TypeScript

--- a/src/ChatApp/Features/Manage/Views/Index.cshtml
+++ b/src/ChatApp/Features/Manage/Views/Index.cshtml
@@ -99,11 +99,9 @@
 @section scripts
 {
     <environment names="Development">
-        <script asp-append-version="true" type="text/javascript" src="~/lib/jquery.cookie/jquery.cookie.js"></script>
-        <script asp-append-version="true" type="text/javascript" src="~/js/manage/index.js"></script>
+        <script asp-append-version="true" type="text/javascript" src="~/js/manage/app.js"></script>
     </environment>
     <environment names="Staging,Production">
-        <script asp-append-version="true" type="text/javascript" src="~/lib/jquery.cookie/jquery.cookie.js"></script>
-        <script asp-append-version="true" type="text/javascript" src="~/js/manage/index.min.js"></script>
+        <script asp-append-version="true" type="text/javascript" src="~/js/manage/app.min.js"></script>
     </environment>
 }
