機能 #104 画像のリサイズ機能の改善 初期画像の設定

--- a/src/ChatApp/Features/Room/Views/NgTmpl/Modal/_Room.cshtml
+++ b/src/ChatApp/Features/Room/Views/NgTmpl/Modal/_Room.cshtml
@@ -99,8 +99,8 @@
         <div class="modal-main">
             <div>
                 <span class="clip-image" chat-image-cliper c:ctrl="ctrl" c:assign="c"
+                    c:src="{{ c.room.avatarUrl() }}"
                     c:option="{zoomStep: 10, imageType: 'image/png', parentSelector: '.modal'}">
-                    <img src="" />
                 </span>
             </div>
             <div>
