--- a/src/ChatApp/Features/Room/Views/NgTmpl/_Sidebar.cshtml
+++ b/src/ChatApp/Features/Room/Views/NgTmpl/_Sidebar.cshtml
@@ -39,7 +39,7 @@
             <div class="media" ng-repeat="r in c.rooms" ng-class="{active: c.room == r}">
                 <div class="media-left media-middle" ng-click="RoomCtrl.SelectRoom(r)">
                     <span class="img-thumbnail room-avatar-thumbnail" style="padding: 1px;">
-                        <img ng-src="../ChatRoomAvatar/Get/{{r.avatarId}}" style="border-radius: 2px;" height="50" />
+                        <img ng-src="{{ r.avatarUrl() }}" style="border-radius: 2px;" height="50" />
                         <i ng-show="r.unReadMessageCount > 0" class="has-message-mark"></i>
                     </span>
                 </div>
