タスク typingsの依存を削除

--- a/src/ChatApp/Features/Room/Views/_RoomScriptsPartial.cshtml
+++ b/src/ChatApp/Features/Room/Views/_RoomScriptsPartial.cshtml
@@ -1,1 +1,2 @@
+<script asp-append-version="true" src="~/lib/angular/dist/angular.min.js"></script>
 <script asp-append-version="true" src="~/js/room/app.js"></script>
